--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@ ft_isprint.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_strncmp.c\
 ft_strlcpy.c ft_strlcat.c ft_strnstr.c ft_atoi.c ft_isspace_bonus.c ft_calloc.c\
 ft_strdup.c ft_strjoin.c ft_strtrim.c ft_substr.c ft_split.c ft_itoa.c\
 ft_strmapi.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
-ft_uitoa.c
+ft_uitoa.c ft_u_len.c long_to_hex.c
 
 OBJS = $(SRCS:%.c=%.o)
 
